[tool.poetry]
name = "pay-by-square"
version = "0.1.0"
description = "Generate QR codes for by square payments"
authors = ["Matúš Ferech"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/matusf/pay-by-square"
keywords = ["payments", "qrcode", "pay"]

[tool.poetry.dependencies]
python = "^3.6.2"

[tool.poetry.dev-dependencies]
black = "21.9b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
skip-string-normalization = true
